alteração no css

--- a/css/arquivo.css
+++ b/css/arquivo.css
@@ -15,7 +15,7 @@ header{
 
 aside{
     background-color: green;
-    min-height: 600px;
+    height: 600px;
     color: white;
     padding: 10px;
     width: 20%;
